# CommunicationOnOpenCV

./: AWGNChannel.h  CMakeLists.txt  README.md  constellation2D.h  main.cpp  util.h
Python/: AWGN.ipynb  ComOpenCV.ipynb  PyUtils.py
